fix: increase 쿼리 변경
deadlock 발생으로 upsert 쿼리로 변경